--- a/.classpath
+++ b/.classpath
@@ -1,53 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-/*  
-* Sipper
-* - A SIP Client for the Android O/S
-*
-* Copyright (C) 2015, Dermot Blair.
-* 
-* Contact: Dermot Blair <webvulscan(at)gmail(dot)com>
-*
-* This file is part of the Sipper Project (https://github.com/dermotblair/Sipper)
-*
-* Sipper is free software: you can redistribute it and/or modify
-* it under the terms of the GNU General Public License as published by
-* the Free Software Foundation, either version 3 of the License, or
-* (at your option) any later version.
-*
-* Sipper is distributed in the hope that it will be useful,
-* but WITHOUT ANY WARRANTY; without even the implied warranty of
-* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-* GNU General Public License for more details.
-*
-* You should have received a copy of the GNU General Public License
-* along with Sipper.  If not, see <http://www.gnu.org/licenses/>.
-*
-* This project consumes, and includes, the imsdroid project which
-* is also licensed under the GNU GPL v3 license.
-*
-* The following section is the copyright notice of the imsdroid project:
-*
-* Copyright (C) 2010-2011, Mamadou Diop.
-* Copyright (C) 2011, Doubango Telecom.
-*
-* Contact: Mamadou Diop <diopmamadou(at)doubango(dot)org>
-*	
-* This file is part of imsdroid Project (http://code.google.com/p/imsdroid)
-*
-* imsdroid is free software: you can redistribute it and/or modify it under the terms of 
-* the GNU General Public License as published by the Free Software Foundation, either version 3 
-* of the License, or (at your option) any later version.
-*	
-* imsdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
-* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
-* See the GNU General Public License for more details.
-*	
-* You should have received a copy of the GNU General Public License along 
-* with this program; if not, write to the Free Software Foundation, Inc., 
-* 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
-*/
--->
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
@@ -55,5 +6,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="lib" path="/android-ngn-stack/libs/simple-xml-2.3.4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-ngn-stack"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/android-support-v7-appcompat"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
