--- a/project.properties
+++ b/project.properties
@@ -36,7 +36,7 @@
 # imsdroid is free software: you can redistribute it and/or modify it under the terms of 
 # the GNU General Public License as published by the Free Software Foundation, either version 3 
 # of the License, or (at your option) any later version.
-#	
+#
 # imsdroid is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
 # without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  
 # See the GNU General Public License for more details.
@@ -55,12 +55,12 @@
 #
 # To customize properties used by the Ant build system edit
 # "ant.properties", and override values to adapt the script to your
-# project structure.
+# project structure.  
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
 target=android-21
-android.library.reference.1=..\\android-support-v7-appcompat
-android.library.reference.2=../../imsdroid_v2_0_read_only/android-ngn-stack
+android.library.reference.1=..\\android-ngn-stack
+android.library.reference.2=../android-support-v7-appcompat
